# SimpleUpdater

./: LICENSE  README.md  SimpleUpdater.py  check.py  example.py  setup.cfg
.github/workflows/: python-publish.yml
src/SimpleUpdater/: SimpleUpdater.py  check.py  download.py
tests/: example.py
