[metadata]
name = simpleupdater
version = 0.1.2
author = Vishok M
author_email = 
description = Seamlessly update your software with ease using this lightweight Python module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mvishok/SimpleUpdater
project_urls =
    Bug Tracker = https://github.com/mvishok/SimpleUpdater/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires = 
    packaging

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src